# bevy_metrics_dashboard

./: Cargo.toml  README.md  flake.nix  rust-toolchain-cranelift.toml  rust-toolchain.toml
examples/: frame_metrics.rs  many_metrics.rs  namespace_tree.rs  sample_metrics.rs  stress.rs
nixModules/: devShell.nix
src/: core_metrics_plugin.rs  dashboard_plugin.rs  dashboard_window.rs  dropdown_list.rs  finder.rs  lib.rs  namespace_tree.rs  plots.rs  plugin.rs  registry.rs  registry_plugin.rs  render_metrics_plugin.rs  ring.rs  search_bar.rs
