[package]
name = "bevy_metrics_dashboard"
version = "0.3.2"
description = "Metrics dashboard for Bevy apps"
edition = "2021"
authors = ["Duncan Fairbanks <duncanfairbanks6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsairobo/bevy_metrics_dashboard"
homepage = "https://github.com/bonsairobo/bevy_metrics_dashboard"
documentation = "https://docs.rs/bevy_metrics_dashboard"
readme = "README.md"
keywords = ["bevy", "egui", "monitoring"]
categories = ["development-tools", "game-development"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[features]

# The version of egui supported by bevy_egui
default = ["egui_29"]

egui_29 = ["dep:egui_29", "dep:egui_plot_29"]
egui_31 = ["dep:egui_31", "dep:egui_plot_31"]

render_metrics = ["bevy/bevy_core_pipeline"]

[dependencies]
bevy_egui = { version = "0.30", optional = true }
egui_29 = { package = "egui", version = "0.29", optional = true }
egui_31 = { package = "egui", version = "0.31", optional = true }
egui_plot_29 = { package = "egui_plot", version = "0.29", optional = true }
egui_plot_31 = { package = "egui_plot", version = "0.31", optional = true }
float-ord = "0.3.2"
fuzzy-matcher = "0.3.7"
metrics = "0.22.0"
metrics-util = "0.16.0"
num-traits = "0.2.18"
smallvec = "1.13.1"

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["multi_threaded"]

[dev-dependencies]
rand = "0.8.5"

[dev-dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_sprite", "png", "wayland"]

[[example]]
name = "stress"
path = "examples/stress.rs"
required-features = ["bevy_egui", "render_metrics"]

[[example]]
name = "many_metrics"
path = "examples/many_metrics.rs"
required-features = ["egui_29", "bevy_egui"]

[[example]]
name = "namespace_tree"
path = "examples/namespace_tree.rs"
required-features = ["egui_29", "bevy_egui"]
