[package]
name = "bevy_metrics_dashboard"
version = "0.5.0"
description = "Metrics dashboard for Bevy apps"
edition = "2021"
authors = ["Duncan Fairbanks <duncanfairbanks6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsairobo/bevy_metrics_dashboard"
homepage = "https://github.com/bonsairobo/bevy_metrics_dashboard"
documentation = "https://docs.rs/bevy_metrics_dashboard"
readme = "README.md"
keywords = ["bevy", "egui", "monitoring"]
categories = ["development-tools", "game-development"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[features]

# The version of egui supported by bevy_egui
default = []

render_metrics = ["bevy/bevy_core_pipeline"]

[dependencies]
bevy_egui = { version = "0.33", optional = true }
egui = "0.31"
egui_plot = "0.31"
float-ord = "0.3.2"
fuzzy-matcher = "0.3.7"
metrics = "0.24.1"
metrics-util = "0.19.0"
num-traits = "0.2.18"
smallvec = "1.13.1"

[dependencies.bevy]
version = "0.15"
default-features = false
# TODO: we shouldn't need to enable "wayland" unconditionally, but bevy 0.15
# seems to have broken the build without it
features = ["multi_threaded", "wayland"]

[dev-dependencies]
rand = "0.8.5"

[dev-dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_sprite", "png", "wayland", "bevy_window"]

[[example]]
name = "stress"
path = "examples/stress.rs"
required-features = ["bevy_egui", "render_metrics"]

[[example]]
name = "many_metrics"
path = "examples/many_metrics.rs"
required-features = ["bevy_egui"]

[[example]]
name = "namespace_tree"
path = "examples/namespace_tree.rs"
required-features = ["bevy_egui"]
